force-app/main/default/objects/Retail_Delivery_Date__c/Retail_Delivery_Date__c.object-meta.xml
<CustomObject>
    <label>Retail Delivery Date</label>
    <nameField>
        <displayFormat>DD-{0000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retail Delivery Date</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>