force-app/main/default/objects/Retail_Delivery_Date__c/fields/Has_customer_received_the_order__c.field-meta.xml
<CustomField>
    <fullName>Has_customer_received_the_order__c</fullName>
    <label>Has customer received the order?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>