force-app/main/default/objects/Retail_Delivery_Date__c/fields/Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_ID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Order ID</label>
    <referenceTo>Retail_Order__c</referenceTo>
    <relationshipLabel>Retail Delivery Date</relationshipLabel>
    <relationshipName>Retail_Delivery_Date</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>